--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@next/eslint-plugin-next": "^14.0.3",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/eslint": "^8.44.7",
-    "@types/node": "^18.17.0",
+    "@types/next": "^8.0.7",
+    "@types/node": "^18.19.71",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
